2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (AS_ESCAPE): Make the pattern a bit simpler;
	  use \& insetad of \1.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (_AS_ECHO_UNQUOTED): Move the macro lower;
	no code change.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_ifset): Use m4_ifval.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_INIT_SRCDIR): Merge the two error
	  messages when ac_unique_file is not found.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_CONFIG_MACRO_DIR): Simplify the
	  `if' at the end.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* bin/autoconf.as: Make more use of "shift 2" in option processing.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>

	* bin/Makefile.am: Merge the two rules for creating scripts.

2005-05-23  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_MSG_RESULT_UNQUOTED): Make
	obsolete; it was never documented.
	(AC_CACHE_CHECK): Use AC_MSG_RESULT instead.

2005-05-20  Stepan Kasal  <kasal@ucw.cz>

	* NEWS: @top_builddir@ is now a dirname, ac_top_builddir will follow.
	* lib/autoconf/status.m4 (_AC_SRCDIRS): Rename ...
	(ac_top_builddir): ... this ...
	(ac_top_build_prefix): ... to this; the old name is also kept, for
	  backward compatibility.
	(ac_top_builddir_sub): New variable, without the trailing slash,
	  always nonempty.
	(_AC_OUTPUT_FILES): s/@top_builddir@/$ac_top_builddir_sub/
	* doc/autoconf.texi (Configuration Actions): Rename
	  ac_top_builddir to ac_top_build_prefix.
	* lib/autoconf/autotest.m4 (AC_CONFIG_TESTDIR): Rename
	  at_top_builddir to at_top_build_prefix.
	* lib/autotest/general.m4 (AT_INIT): Likewise.

2005-05-20  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_INIT_PREPARE): Simplify the init
	  of confdefs.h .

2005-05-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_text_wrap): Don't m4_quote the second