@@ -1,5 +1,10 @@
 2005-05-24  Stepan Kasal  <kasal@ucw.cz>
 
+	* lib/m4sugar/m4sh.m4 (_AS_ECHO_LOG): New macro to factor out
+	  common code; used in many places in the tree.
+
+2005-05-24  Stepan Kasal  <kasal@ucw.cz>
+
 	* lib/m4sugar/m4sh.m4 (AS_ESCAPE): Make the pattern a bit simpler;
 	  use \& insetad of \1.
 
